# client

./: README.md  main.py  pyproject.toml
LICENSES/: nanoko-python-LICENSE
app/: config.py
app/controllers/: apiWorker.py  mainController.py  studentController.py  teacherController.py
app/utils/: __init__.py
app/views/: signinDialog.py  signupDialog.py  studentMainWindow.py  teacherMainWindow.py
